feat: log runner elapsed time

--- a/.horusec/horusec-config.json
+++ b/.horusec/horusec-config.json
@@ -10,7 +10,8 @@
       "**/tmp/**",
       "**/bin/**",
       "**/internal/services/engines/**",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "**/*.spec.*"
     ],
     "horusecCliToolsConfig": {
       "Bandit": {
