feat: snky runner

--- a/config.json
+++ b/config.json
@@ -26,6 +26,11 @@
             {
                 "module_name": "domain.use_case.semgrep_runner",
                 "class_name": "SemgrepRunner",
+                "enabled": false
+            },
+            {
+                "module_name": "domain.use_case.snyk_runner",
+                "class_name": "SnykRunner",
                 "enabled": true
             }
         ]
