chore: improve snyk runner

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "application": {
-        "filter_languages": ["PHP"],
+        "filter_languages": ["CSharp","Java","Kotlin","Go"],
         "max_workers": 3,
         "runners":[ 
             {
